tests/rosetta/out/Smalltalk/aks-test-for-primes.out
/workspace/mochi/tests/rosetta/out/Smalltalk/aks-test-for-primes.st:19: parse error, expected integer literal or floating-point literal or decimal literal
