tests/rosetta/out/Smalltalk/aks-test-for-primes.st
" Generated by Mochi compiler v0.10.30 on 2006-01-02T15:04:05Z
"
| poly s coef i d aks c main p first line |
poly := [:p | s := ''.
coef := 1.
i := p.
((coef ~= 1)) ifTrue: [
s := (s + ((coef asString))).
] .
[(i > 0)] whileTrue: [.
s := (s + 'x').
((i ~= 1)) ifTrue: [
s := (((s + '^')) + ((i asString))).
] .
coef := (((coef * i)) / ((((p - i)) + 1))) asInteger.
d := coef.
((((((p - ((i - 1)))) % 2)) = 1)) ifTrue: [
d := -d.
] .
((d < 0)) ifTrue: [
s := (((s + (' - '))) + ((-d asString))).
] ifFalse: [
s := (((s + (' + '))) + ((d asString))).
].
i := (i - 1).
].
.
((s = '')) ifTrue: [
s := '1'.
] .
s. ].
aks := [:n | ((n < 2)) ifTrue: [
false.
] .
c := n.
i := 1.
[(i < n)] whileTrue: [.
((((c % n)) ~= 0)) ifTrue: [
false.
] .
c := (((c * ((n - i)))) / ((i + 1))) asInteger.
i := (i + 1).
].
.
true. ].
main := [ p := 0.
[(p <= 7)] whileTrue: [.
Transcript show: ((((((p asString)) + (':  '))) + (poly value: p))) printString; cr.
p := (p + 1).
].
.
first := true.
p := 2.
line := ''.
[(p < 50)] whileTrue: [.
(aks value: p) ifTrue: [
(first) ifTrue: [
line := (line + ((p asString))).
first := false.
] ifFalse: [
line := (((line + (' '))) + ((p asString))).
].
] .
p := (p + 1).
].
.
Transcript show: (line) printString; cr. ].
main value.
